--- a/client/css/master.css
+++ b/client/css/master.css
@@ -2,10 +2,18 @@
 
 *{
   box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 body{
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  position: fixed;
 }
 #screen{
   position: fixed;
@@ -13,6 +21,7 @@ body{
   top: 0;
   width: 100vw;
   height: 100vh;
+  pointer-events: none;
 }
 
 #renderer{
@@ -22,6 +31,7 @@ body{
   top: 0;
   width: 100vw;
   height: 100vh;
+  display: none;
 }
 #errorSection{
   outline: none;
