--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 #sectorMenu{
   width: 200px;
   height: 200px;
@@ -8,6 +9,12 @@
   top: 50%;
   transform: translate(-50%, -50%);
   border-radius: 250px;
+}
+#onCeilDoubleClick{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  pointer-events: none;
   display: none;
 }
 
@@ -17,11 +24,52 @@
   background-color: rgba(0,0,0,0.4);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  position: fixed;
   border-radius: 50px;
+  position: fixed;
+}
+.sectorMenuButton_image{
+  width: 100%;
+  height: 100%;
+}
 
+#buildingMenu{
+  font-family: 'Roboto', sans-serif;
+  width: 250px;
+  min-height: 100px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0,0,0,0.2);
+  pointer-events: auto;
+  display: none;
+}
+#buildName{
+  font-weight: bold;
+  color:white;
+  text-align: center;
+  margin-bottom: 2px;
+}
+#buildDescription{
+  font-weight: normal;
+  width: 90%;
+  margin: auto;
+  color:white;
+  padding-bottom: 5px;
+  font-size: 0.75em;
 
 }
+.buildingMenu_button{
+  width: 50px;
+  height: 50px;
+  border-radius:50px;
+  margin-bottom: 5px;
+  background-color: rgba(0,0,0,0.4);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+
 
 
 @media only screen and (orientation : landscape) and  (max-device-width : 1024px) {
