--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -17,7 +17,13 @@
   pointer-events: none;
   display: none;
 }
-
+.changeSectorMenuButton{
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  position: fixed;
+  background-color: rgba(0,0,0,0.4);
+}
 .sectorMenuButton{
   width: 50px;
   height: 50px;
