--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -56,8 +56,19 @@
   text-align: center;
   margin-bottom: 2px;
 }
+#buildCoast{
+  font-weight: normal;
+  width: 90%;
+  margin: auto;
+  color:white;
+  padding-bottom: 5px;
+  font-size: 0.75em;
+    text-align: center;
+}
 #buildDescription{
   font-weight: normal;
+
+
   width: 90%;
   margin: auto;
   color:white;
