--- a/client/css/gameInterface/turn.css
+++ b/client/css/gameInterface/turn.css
@@ -1,13 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,700&display=swap');
-
-#balanceSection{
+#turnSection{
   width: 100vw;
   height: 100vh;
   pointer-events: none;
   position: fixed;
-}
 
-#balanceDiv{
   color: white;
   text-shadow: 0px 0px 1px black;
   font-weight: bold;
@@ -15,4 +11,16 @@
   text-align: center;
   font-size: 1.5em;
   padding-top: 1vh;
+}
+
+#turnInfo{
+  position: fixed;
+  bottom:10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#turnButton{
+
+  display: none;
 }
