--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
 #factorySection{
   width: 100vw;
   height: 100vh;
@@ -19,11 +20,10 @@
 }
 #factoryMenu{
   position: fixed;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   color: white;
   text-shadow:0px 0px 2px black;
   border-radius: 10px;
-
 }
 .factoryMenu_settings_progressBar{
   height: 100%;
@@ -109,7 +109,170 @@
    font-size: 1.2em;
    text-align: center;
    font-weight: bold;
-   font-family: 'Roboto', sans-serif;
+   font-family: 'Roboto Condensed', sans-serif;
    opacity: 0.9;
    transition-duration: 0.1s;
+}
+
+
+
+
+
+
+
+
+
+
+
+#factoryMenu_Section{
+    position: fixed;
+  display: flex;
+  font-family: 'Roboto Condensed', sans-serif;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+  flex-direction: column;
+  perspective: 1000px;
+  -webkit-perspective:1000px;
+
+  filter: drop-shadow(-20px 0px 10px rgba(0,0,0,0.2));
+  -webkit-filter: drop-shadow(10px 0px 15px rgba(0,0,0,0.5));
+
+}
+
+#factoryMenu_Card{
+  width: 250px;
+  height: 375px;
+  margin:auto;
+  border-radius: 15px;
+  padding: 15px;
+  background: linear-gradient(284deg, #ffe8ff, #e1fbff);
+
+  /* 3D */
+  transform: translateX(-80%)rotateY(15deg);
+  border-left:3px solid #9e9c93;
+
+}
+
+#factoryMenu_ActionButton{
+  width: 125px;
+  height: 60px;
+  margin:auto;
+  margin-top:10px;
+  background-color:#cbcbcb;
+  border-radius: 10px;
+
+    /* 3D */
+  transform: translateX(-100%)rotateY(10deg);
+}
+
+/* 3D */
+/* #factoryMenu_ActionButton:hover {
+  transform: translateX(-105%)rotateY(30deg);
+} */
+
+
+#factoryMenu_Card_Title{
+  text-align: center;
+  font-family: 'Playball', cursive;
+  text-shadow: 0px 0px 1px rgba(0,0,0,0.8);
+  font-size: 2em;
+  color: #f9f9f9;
+  width: 100%;
+}
+
+
+#factoryMenu_Card_ProgressLine{
+  width: 100%;
+  height: 70px;
+  margin-top: 10px;
+}
+
+#factoryMenu_Card_ProgressLine_Title{
+    text-shadow: 0px 0px 1px rgba(0,0,0,0.8);
+    color: #f9f9f9;
+    font-size: 1em;
+}
+#factoryMenu_Card_ProgressLine_Price{
+  text-shadow: 0px 0px 1px rgba(0,0,0,0.8);
+  color: #ff8a8a;
+  text-align: center;
+}
+#factoryMenu_Card_ProgressLine_Container{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+#factoryMenu_Card_StorageLine{
+  width: 100%;
+  height: 70px;
+  margin-top: 60px;
+}
+#factoryMenu_Card_StorageLine_Title{
+  text-shadow: 0px 0px 1px rgba(0,0,0,0.8);
+  color: #f9f9f9;
+  font-size: 1em;
+}
+#factoryMenu_Card_StorageLine_Container{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+
+
+
+.factoryMenu_Card_Ceil{
+  width: 20px;
+  height: 50px;
+  margin-left: 5px;
+  flex:0 0 auto;
+  border-radius: 5px;
+  /* border: 1px solid rgba(0, 0, 0, 0.2); */
+}
+/* просто дырка в карточке */
+.factoryMenu_Card_Empty{
+  background-color: rgba(0, 0, 0, 0.05);
+  box-shadow:
+    inset 1px 1px 2px 0px rgba(0, 0, 0, 0.2),
+    inset -1px -1px 2px 0px rgba(255, 255, 255, 0.8)
+  ;
+}
+/* затычка*/
+.factoryMenu_Card_Gag{
+  box-shadow:
+    inset 1px 1px 2px 0px rgba(255, 255, 255, 0.8),
+    inset -1px -1px 2px 0px rgba(0, 0, 0, 0.2)
+  ;
+}
+
+
+
+
+.factoryMenu_Card_Full_0{
+  background: linear-gradient(90deg, #ecf8ff 0%, #fef2ff 100%);
+}
+.factoryMenu_Card_Full_1{
+  background: linear-gradient(90deg, #ffe2c7 0%, #f1b882 100%);
+}
+.factoryMenu_Card_Full_2{
+  background: linear-gradient(90deg, #cfcfcf 0%, #b3b3b3 100%);
+}
+.factoryMenu_Card_Full_3{
+    background: linear-gradient(90deg, #ffeeb1 0%, #ffd53e 100%);
+}
+.factoryMenu_Card_Full_Image{
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+}
+
+
+.factoryMenu_Card_Ceil_wood{
+  background: url(../img/factoryCards/resources/wood.png);
+  background-size: contain;
+
 }
