--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -141,7 +141,7 @@
 }
 
 #factoryMenu_Card{
-  width: 250px;
+  width: 228px;
   height: 375px;
   margin:auto;
   border-radius: 15px;
@@ -150,7 +150,7 @@
 
   /* 3D */
   transform: translateX(-80%)rotateY(15deg);
-  border-left:3px solid #9e9c93;
+  border-left:1px solid #9e9c93;
 
 }
 
@@ -158,6 +158,7 @@
   width: 125px;
   height: 60px;
   margin:auto;
+  display: flex;
   margin-top:10px;
   background-color:#cbcbcb;
   border-radius: 10px;
@@ -167,9 +168,9 @@
 }
 
 /* 3D */
-/* #factoryMenu_ActionButton:hover {
-  transform: translateX(-105%)rotateY(30deg);
-} */
+#factoryMenu_ActionButton:hover {
+  transform: translateX(-102%)rotateY(15deg);
+}
 
 
 #factoryMenu_Card_Title{
@@ -275,4 +276,16 @@
   background: url(../img/factoryCards/resources/wood.png);
   background-size: contain;
 
+}
+
+
+#factoryMenu_Card_TEST{
+  width: 102%;
+  height: 100%;
+  position: absolute;
+  left: 0px;
+  top:0px;
+  border-radius: 15px;
+  /* background: url(../img/factoryCards/resources/test.png); */
+  background-size: cover;
 }
