--- a/client/css/gameInterface/trucksMenu.css
+++ b/client/css/gameInterface/trucksMenu.css
@@ -112,7 +112,31 @@
 
 
 
+#truckDice{
+  display: none;
+  width: 75px;
+  height: 75px;
+  overflow: hidden;
+  position: fixed;
 
+  left: 50%;
+  top:30%;
+
+  border-radius: 10px;
+
+
+  transform: translate(-50%,-50%);
+
+
+}
+
+#truckDiceInner{
+  width: 100%;
+  height: 600%;
+  background-image: url(../img/dice/dice.png);
+  background-size: contain;
+  position: relative;
+}
 
 
 
