--- a/client/css/gameInterface/resource.css
+++ b/client/css/gameInterface/resource.css
@@ -15,18 +15,23 @@
   color:white;
   font-weight: normal;
   margin-left: 4px;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.25);
+
 
 }
 
 .resource-gag-title{
   width: 100%;
-  height: 24px;
   font-size: 5px;
-
-
 }
 
-
+.resource-gag-quality{
+  position: relative;
+  width: 100%;
+  text-align: right;
+  top: 8px;
+  font-size: 5px;
+}
 
 
 
