--- a/client/css/gameInterface/resource.css
+++ b/client/css/gameInterface/resource.css
@@ -52,3 +52,13 @@
 .resource-color-water{
   color: #ADCCD0;
 }
+
+
+
+.resource-bg-color-sand{
+  background-color: #E3DAB9;
+}
+
+.resource-color-sand{
+  color: #E3DAB9;
+}
