--- a/client/css/gameInterface/resource.css
+++ b/client/css/gameInterface/resource.css
@@ -62,3 +62,11 @@
 .resource-color-sand{
   color: #E3DAB9;
 }
+
+.resource-bg-color-steel{
+  background-color: #AEACAA;
+}
+
+.resource-color-steel{
+  color: #AEACAA;
+}
