--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -53,6 +53,8 @@
   z-index: -1;
   border-radius: 20px;
   box-shadow: 0px 0px 50px rgba(0,0,0,0.8);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
 }
 #factoryMenu_Button{
   position: fixed;
