--- a/client/css/gameInterface/trucksMenu.css
+++ b/client/css/gameInterface/trucksMenu.css
@@ -116,14 +116,15 @@
     border-radius: 20px;
     display: none;
     transform: translate(-50%, -50%);
-    top: 40%;
-    left: 50%;
+    top: 30%;
+    left: 65%;
     width: 80px;
     height: 40px;
     background-color: rgba(0,0,0,0.3);
     color: white;
     text-align: center;
     pointer-events: auto;
+    font-family: 'Roboto'
 }
 
 
