--- a/client/css/gameInterface/turn.css
+++ b/client/css/gameInterface/turn.css
@@ -22,6 +22,15 @@
 }
 
 #turnButton{
-
+  width: 70px;
+  font-weight: 400;
+  font-size: 0.9em;
+  height: 50px;
+  position: fixed;
+  left: 80%;
+  top:90%;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 10px;
+  pointer-events: auto;
   display: none;
 }
