--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -22,7 +22,7 @@
   position: fixed;
   font-family: 'Roboto Condensed', sans-serif;
   color: white;
-  text-shadow:0px 0px 2px black;
+  /* text-shadow:0px 0px 2px black; */
   border-radius: 10px;
 }
 .factoryMenu_settings_progressBar{
@@ -109,6 +109,8 @@
 
 
 
+
+
 #factoryMenu_Section{
     position: fixed;
   display: flex;
@@ -126,17 +128,12 @@
 }
 
 #factoryMenu_Card{
-  width: 220px;
-  height: 330px;
+  width: 330px;
+  height: 220px;
   margin:auto;
-  border-radius: 15px;
-  padding: 15px;
-  background: linear-gradient(284deg, #ffe8ff, #e1fbff);
-
   /* 3D */
   transform: translateX(-80%)rotateY(15deg);
   border-left:1px solid #9e9c93;
-
 }
 
 #factoryMenu_ActionButton{
@@ -156,16 +153,77 @@
 #factoryMenu_ActionButton:hover {
   transform: translateX(-102%)rotateY(15deg);
 }
-
-
-#factoryMenu_Card_Title{
-  text-align: center;
-  font-family: 'Playball', cursive;
-  text-shadow: 0px 0px 1px rgba(0,0,0,0.8);
-  font-size: 2em;
-  color: #f9f9f9;
-  width: 100%;
+.factoryMenu_Card_Titles{
+  font-size: 18px;
+  font-weight: lighter;
+  margin-bottom: 5px;
 }
+
+
+#factoryMenu_Card_Top{
+  width: 100%;
+  height: 58px;
+}
+#factoryMenu_Card_ProductionPart_Container{
+  width: 100%;
+  display: flex;
+}
+#factoryMenu_Card_Bottom{
+  width: 100%;
+  height: 125px;
+  /* background-color: #499c5e; */
+  display: flex;
+  padding: 5px;
+}
+
+#factoryMenu_Card_ResourseLogo{
+  width: 115px;
+  height: 115px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.factoryMenu_Card_ResourseLogo-title{
+  width: 100%;
+  font-size: 25px;
+  color: white;
+  font-weight: 500;
+
+}
+.factoryMenu_Card_ResourseLogo-qualityContainer{
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 0px;
+  width: 100%;
+  align-items: center;
+
+}
+.factoryMenu_Card_ResourseLogo-qualityContainer-q{
+  color: white;
+  font-weight: 600;
+  margin: 2px;
+  font-size: 20px;
+}
+
+
+#factoryMenu_Card_StoragePart{
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.factoryMenu_Card_StoragePart-title{
+  text-align: center;
+}
+
+.factoryMenu_Card_StoragePart-storageContainer{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
 
 
 #factoryMenu_Card_ProgressLine{
@@ -208,69 +266,10 @@
   justify-content: center;
 }
 
+.factoryMenu_Card_StoragePart-price{
+  color: #c82828;
+  text-align: center;
+  font-size: 20px;
 
 
-
-.factoryMenu_Card_Ceil{
-  width: 20px;
-  height: 50px;
-  margin-left: 5px;
-  flex:0 0 auto;
-  border-radius: 5px;
-  /* border: 1px solid rgba(0, 0, 0, 0.2); */
-}
-/* просто дырка в карточке */
-.factoryMenu_Card_Empty{
-  background-color: rgba(0, 0, 0, 0.05);
-  box-shadow:
-    inset 1px 1px 2px 0px rgba(0, 0, 0, 0.2),
-    inset -1px -1px 2px 0px rgba(255, 255, 255, 0.8)
-  ;
-}
-/* затычка*/
-.factoryMenu_Card_Gag{
-  box-shadow:
-    inset 1px 1px 2px 0px rgba(255, 255, 255, 0.8),
-    inset -1px -1px 2px 0px rgba(0, 0, 0, 0.2)
-  ;
-}
-
-
-
-
-.factoryMenu_Card_Full_0{
-  background: linear-gradient(90deg, #ecf8ff 0%, #fef2ff 100%);
-}
-.factoryMenu_Card_Full_1{
-  background: linear-gradient(90deg, #ffe2c7 0%, #f1b882 100%);
-}
-.factoryMenu_Card_Full_2{
-  background: linear-gradient(90deg, #cfcfcf 0%, #b3b3b3 100%);
-}
-.factoryMenu_Card_Full_3{
-    background: linear-gradient(90deg, #ffeeb1 0%, #ffd53e 100%);
-}
-.factoryMenu_Card_Full_Image{
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-}
-
-
-.factoryMenu_Card_Ceil_wood{
-  background: url(../img/factoryCards/resources/wood.png);
-  background-size: contain;
-
-}
-
-
-#factoryMenu_Card_TEST{
-  width: 102%;
-  height: 100%;
-  position: absolute;
-  left: 0px;
-  top:0px;
-  border-radius: 15px;
-  /* background: url(../img/factoryCards/resources/test.png); */
-  background-size: cover;
 }
