--- a/client/css/gameInterface/resource.css
+++ b/client/css/gameInterface/resource.css
@@ -34,7 +34,24 @@
   font-size: 5px;
 }
 
-
+.quality-hole{
+  width: 24px;
+  height: 24px;
+  border-radius: 24px;
+  box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: 2px;
+  flex: 0 0 auto;
+}
+.quality-gag{
+  width: 24px;
+  height: 24px;
+  flex: 0 0 auto;
+  border-radius: 24px;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.25);
+  background-color: #EAEAEA;
+  margin: 2px;
+}
 
 
 .resource-bg-color-wood{
