--- a/client/css/gameInterface/card.css
+++ b/client/css/gameInterface/card.css
@@ -7,6 +7,12 @@
   background-color:#EAEAEA;
   font-family: 'Roboto', sans-serif;
   color:#303030;
+
+
+  /* background-color:rgba(255, 255, 255,0.4);
+
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); */
 }
 
 
