--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -25,79 +25,6 @@
   /* text-shadow:0px 0px 2px black; */
   border-radius: 10px;
 }
-.factoryMenu_settings_progressBar{
-  height: 100%;
-  width: 0%;
-  background-color: white;
-}
-.factoryMenu_settings_progress{
-  width: 50%;
-  height: 10px;
-  background-color: rgba(0,0,0,0.1);
-  overflow: hidden;
-  border-radius: 5px;
-}
-.factoryMenu_settings_button{
-  font-size: 1.5em;
-  width: 20%;
-  text-align: center;
-}
-#factoryMenu_Container{
-  position: fixed;
-  width: 250px;
-  height: 375px;
-  left:50%;
-  top:40%;
-  transform: translate(-50%,-50%);
-  background-size: contain;
-  z-index: -1;
-  border-radius: 20px;
-  box-shadow: 0px 0px 50px rgba(0,0,0,0.8);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-}
-#factoryMenu_Button{
-  position: fixed;
-  display: flex;
-  width: 100px;
-  height: 50px;
-  left:50%;
-  top:85%;
-  position: fixed;
-  transform: translate(-50%,-50%);
-  border-radius: 20px;
-  box-shadow: 0px 0px 50px rgba(0,0,0,0.8);
-  text-align: center;
-  background: linear-gradient(90deg, #ebfeed 0%, #d9feff 100%);
-}
-.factoryMenu_settingsLine{
-  width: 90%;
-  margin: auto;
-  margin-top: 2%;
-}
-.factoryMenu_settings_title{
-  text-align: center;
-}
-.factoryMenu_settings_container{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-#factoryMenu_settings_points{
-  text-align: center;
-  height: 5%;
-  margin-top: 2%;
-
-}
-#factoryMenu_title{
-  width: 100%;
-  text-shadow:0px 0px 10px rgba(0,0,0,0.5);
-  font-size:2em;
-  text-align: center;
-  font-weight: bold;
-  margin-top: 10%;
-}
-
 
 
 
@@ -270,6 +197,125 @@
   color: #c82828;
   text-align: center;
   font-size: 20px;
+}
 
 
+
+
+
+
+
+#factoryMenu_SettingsCard{
+  width: 220px;
+  height: 330px;
+  overflow: hidden;
+
+  position: fixed;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+
+}
+/* #factoryMenu_Button{
+  display: flex;
+  width: 100px;
+  height: 50px;;
+  border-radius: 20px;
+} */
+
+
+#factoryMenu_SettingsCard_Top{
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  /* margin-top: 15px; */
+  margin-bottom: 10px;
+}
+
+
+.factoryMenu_SettingsCard_Top-resourceLogo{
+  width: 60px;
+  height: 60px;
+  background-color: #3c8fb5;
+  padding: 5px;
+  font-size: 15px;
+  font-weight: 500;
+  color: white;
+}
+
+#factoryMenu_SettingsCard_Top-pointsCounter{
+  width: 60%;
+  display: flex;
+  font-size: 50px;
+  font-weight: 100;
+
+}
+
+
+
+#factoryMenu_SettingsCard_Middle{
+  width: 100%;
+  height: 180px;
+}
+
+.factoryMenu_SettingsCard_SettingsString{
+  width: 100%;
+  height: 22%;
+  margin-bottom: 3%;
+}
+
+.factoryMenu_SettingsCard_SettingsString-title{
+  width: 100%;
+  height: 30%;
+  font-weight: 100;
+  text-transform: uppercase;
+  font-size: 15px;
+
+}
+.factoryMenu_SettingsCard_SettingsString-SettingContainer{
+  width: 100%;
+  display: flex;
+  height: 70%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.factoryMenu_SettingsCard_SettingsString-button{
+  width: 30%;
+  height: 100%;
+  font-weight: 400;
+  text-align: center;
+  font-size: 20px;
+}
+
+.factoryMenu_SettingsCard_SettingsString-button:hover{
+    background-color: #303030;
+    color: white;
+}
+
+.factoryMenu_SettingsCard_SettingsString-progressBar{
+  width: 36%;
+  height: 40%;
+  background-color: #bbbbbb;
+}
+
+.factoryMenu_SettingsCard_SettingsString-progress{
+  width: 0%;
+  height: 100%;
+  background-color: #303030;
+}
+
+
+.factoryMenu_SettingsCard_Bottom{
+  width: 100%;
+  margin: auto;
+  height: 14.5%;
+  background-color: #303030;
+  color: white;
+  display: flex;
+
+}
+.factoryMenu_SettingsCard_Bottom:hover{
+    background-color: #666666;
 }
