--- a/client/css/gameInterface/trucksMenu.css
+++ b/client/css/gameInterface/trucksMenu.css
@@ -55,13 +55,14 @@
   font-weight: bold;
   display: flex;
   align-items: center;
-  font-size: 12px;
+  font-size: 10px;
   text-transform: uppercase;
 
 }
 
 .trucksMenu-card-button-span{
-  margin-left: 8px;
+  /* margin-left: 8px; */
+  margin: auto;
 }
 
 
