--- a/client/css/gameInterface/trucksMenu.css
+++ b/client/css/gameInterface/trucksMenu.css
@@ -119,7 +119,7 @@
     transform: translate(50%, -50%);
     top: 30%;
     left: 50%;
-    width: 80px;
+    padding: 0 15px;
     height: 40px;
     background-color: rgba(0,0,0,0.3);
     color: white;
