--- a/client/css/gameInterface/path.css
+++ b/client/css/gameInterface/path.css
@@ -4,24 +4,9 @@
   position: fixed;
   pointer-events: none;
   display: block;
+  z-index: 4;
 }
 
-#pathSection_sendButton{
-  width: 120px;
-  height: 40px;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  position: fixed;
-  bottom: 10%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  color: white;
-  font-weight: 1.2em;
-  pointer-events: auto;
-  text-shadow: 0px 0px 1px black;
-  display: none;
-}
 
 #pathSection_notification{
   text-align: center;
@@ -31,4 +16,27 @@
   font-size: 0.8em;
   display: none;
   font-family: sans-serif;
+}
+
+
+#pathSection_ButtonsContainer{
+  pointer-events: auto;
+  transition-duration: 0.05s;
+  display: none;
+  width: 100px;
+  position: fixed;
+  transform: translate(-50%,-50%);
+  height: 40px;
+  justify-content: space-around;
+  perspective: 100px;
+  -webkit-perspective:100px;
+
+}
+.pathSection_buttons{
+  width: 40px;
+  flex:0 0 auto;
+  height: 40px;
+  border-radius: 40px;
+  /* transform: rotateX(15deg); */
+
 }
