factory card interface

--- a/client/css/gameInterface/creditMenu.css
+++ b/client/css/gameInterface/creditMenu.css
@@ -103,6 +103,7 @@
   margin-top: 2px;
   font-size: 13px;
   font-weight: 100;
+  font-family: 'Roboto Condensed';
 }
 .CreditMenu_Card_line-span{
   font-weight: normal;
