--- a/client/css/gameInterface/resource.css
+++ b/client/css/gameInterface/resource.css
@@ -5,7 +5,7 @@
   background-color: #E1E1E1;
   box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.25);
   flex:0 0 auto;
-  margin-left: 4px;
+  margin-right: 4px;
 }
 
 .resource-gag{
@@ -15,9 +15,8 @@
   color:white;
   flex: 0 0 auto;
   font-weight: normal;
-  margin-left: 4px;
+  margin-right: 4px;
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.25);
-
 
 }
 
