balance menu language

--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -179,7 +179,7 @@
   height: 28px;
   display: flex;
   justify-content: space-between;
-  background-color: #303030;
+  background-color: #b0b0b0;
   align-items: center;
   padding-left: 4px;
 }
