--- a/client/css/gameInterface/creditMenu.css
+++ b/client/css/gameInterface/creditMenu.css
@@ -92,6 +92,7 @@
 .CreditMenu_Card_amount{
   text-align: right;
   font-weight: 700;
+  letter-spacing: -0.05em;
   color:#303030;
   font-size: 30px;
   line-height: 80%;
