--- a/client/css/gameInterface/balance.css
+++ b/client/css/gameInterface/balance.css
@@ -79,7 +79,7 @@
   position: fixed;
   left: 50%;
   top:50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%) scale(0.9);
   padding: 5px;
 }
 
