--- a/client/css/gameInterface/gameNotifications.css
+++ b/client/css/gameInterface/gameNotifications.css
@@ -1,3 +1,14 @@
+#fullScreenButton{
+  width: 5vw;
+  height: 2vw;
+  position: fixed;
+  right: 10%;
+  top:10%;
+  z-index: 1000;
+  font-size: 5px;
+}
+
+
 .gameSceneNotification{
   pointer-events: auto;
   width: 25px;
