--- a/client/css/gameInterface/gameNotifications.css
+++ b/client/css/gameInterface/gameNotifications.css
@@ -11,62 +11,74 @@
 
 .gameSceneNotification{
   pointer-events: auto;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
   border-radius: 50px;
-  border: 2px dotted white;
+    color:#ffffff;
+  border: 2px dotted #ffffff;
   /* background-color: rgba(0,0,0,0.4);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px); */
    position: absolute;
-   color: white;
    font-size: 1.2em;
    text-align: center;
    font-weight: bold;
    font-family: 'Roboto Condensed', sans-serif;
    opacity: 0.9;
    transition-duration: 0.1s;
+   backdrop-filter:blur(10px);
+  -webkit-backdrop-filter:blur(10px);
+      display: flex;
 }
 
 
 .truckNotification{
   pointer-events: auto;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
   border-radius: 0px;
-  border: 2px dotted white;
+  color:#ffffff;
+  border: 2px dotted #ffffff;
   /* background-color: rgba(0,0,0,0.4);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px); */
    position: absolute;
-   color: white;
    font-size: 1.2em;
    text-align: center;
    font-weight: bold;
    font-family: 'Roboto Condensed', sans-serif;
    opacity: 0.9;
    transition-duration: 0.1s;
+   backdrop-filter:blur(10px);
+    -webkit-backdrop-filter:blur(10px);
+    display: flex;
 }
 .factoryNotification{
   pointer-events: auto;
-  width: 25px;
-  height: 25px;
+    color:#ffffff;
+  width: 30px;
+  height: 30px;
   border-radius: 50px;
-  border: 2px dotted white;
+  border: 2px dotted #ffffff;
   /* background-color: rgba(0,0,0,0.4);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px); */
    position: absolute;
-   color: white;
    font-size: 1.2em;
    text-align: center;
    font-weight: bold;
    font-family: 'Roboto Condensed', sans-serif;
    opacity: 0.9;
    transition-duration: 0.1s;
+   backdrop-filter:blur(10px);
+   -webkit-backdrop-filter:blur(10px);
+       display: flex;
 }
 
 .redNotification{
   color:#ff2626;
   border-color: #ff2626;
+}
+.span-notification{
+  margin: auto;
 }
