--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-#sectorMenu{
+/* #sectorMenu{
   width: 200px;
   height: 200px;
   background-color: rgba(0,0,0,0.2);
@@ -10,15 +10,15 @@
   transform: translate(-50%, -50%);
   border-radius: 250px;
   z-index: 2;
-}
-#onCeilDoubleClick{
+} */
+/* #onCeilDoubleClick{
   width: 100vw;
   height: 100vh;
   position: fixed;
   pointer-events: none;
   display: none;
-}
-.changeSectorMenuButton{
+} */
+/* .changeSectorMenuButton{
   width: 50px;
   height: 50px;
   border-radius: 50px;
@@ -113,4 +113,165 @@
     height: 10vw;
     border-radius: 10vw;
   }
+}
+
+
+ */
+
+ /* #center{
+   z-index: 10;
+   width: 20px;
+   height: 20px;
+   background-color: red;
+   position: fixed;
+   top:50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+ } */
+
+
+
+#onCeilDoubleClick{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  pointer-events: none;
+  display: block;
+  perspective: 500px;
+  -webkit-perspective:500px;
+  display: flex;
+}
+
+
+
+
+
+#sectorMenu{
+
+  display: none;
+  z-index: 2;
+  margin: auto;
+  width: 400px;
+  height: 255px;
+
+  -webkit-transform:translateX(25%) rotateX(5deg);
+  transform:translateX(25%) rotateX(5deg);
+
+}
+
+
+
+.sectorMenu_Left{
+  width: 200px;
+  height: 255px;
+  display: flex;
+
+}
+.sectorMenu_Top_CentralButton{
+  width: 60px;
+  height: 60px;
+  margin: auto;
+  pointer-events: auto;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 60px;
+}
+
+.sectorMenu_Right{
+  width: 170px;
+  height: 255px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.sectorMenu_button{
+  pointer-events: auto;
+  width: 80px;
+  height: 80px;
+  flex: 0 0 auto;
+  margin: 2px;
+  padding: 2px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  color:white;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 14px;
+
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+
+}
+.sectorMenu_button_title{
+  width: 100%;
+}
+.sectorMenu_button_price{
+  width: 100%;
+  text-align: right;
+
+
+}
+
+
+
+#buildingMenu{
+  pointer-events: auto;
+  display: none;
+  justify-content: space-around;
+  z-index: 2;
+  margin: auto;
+  width: 290px;
+  height: 90px;
+  -webkit-transform:translateX(30%) rotateX(5deg);
+  transform:translateX(30%) rotateX(5deg);
+  align-items: center;
+}
+
+.buildingMenu_card{
+  height: 90px;
+  width: 90px;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+
+
+    color:white;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 13px;
+
+      padding: 2px;
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.buildingMenu_button{
+  width: 80px;
+  height: 40px;
+  flex: 0 0 auto;
+  background-color: #EAEAEA;
+  display: flex;
+
+  color:#303030;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 14px;
+
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+
+  text-transform: uppercase;
+}
+.buildingMenu_button:hover{
+  background-color: #303030;
+  color:white;
+
+}
+.buildingMenu_button-span{
+  margin: auto;
+}
+
+.buildingMenu_card_title{
+  width: 100%;
+}
+.buildingMenu_card_price{
+  width: 100%;
+  text-align: right;
 }
