--- a/client/css/gameInterface/trucksMenu.css
+++ b/client/css/gameInterface/trucksMenu.css
@@ -1,3 +1,12 @@
+#openTruckMenuButton{
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  background-color: red;
+  left: 10px;
+  bottom:10px;
+}
+
 #trucksMenuSection{
   width: 100vw;
   height: 100vh;
