oil well and oil product

--- a/client/css/gameInterface/resource.css
+++ b/client/css/gameInterface/resource.css
@@ -96,3 +96,11 @@
 .resource-color-gold{
   color: #F9D761;
 }
+
+.resource-bg-color-oil{
+  background-color: #454758;
+}
+
+.resource-color-oil{
+  color: #454758;
+}
